<resources>

    <!-- for login-signUp-forgetPassword-->
    <string name="hint_fullname">Fullname</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>
    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>


    <!-- for user profile-->
    <string name="user_display_picture">Welcome</string>
    <string name="loading">Loading…</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="mobile">mobile</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="logout">LogOut</string>


    <!-- rest strings -->
    <string name="app_name">SmartAlert</string>
    <string name="description">Description</string>
    <string name="category">Category*</string>
    <string name="location">Location*</string>
    <string name="timestamp">Timestamp*</string>
    <string name="title">Title*</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="Decline">Decline</string>
    <string name="Accept">Accept</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="please_give_a_title">Please give a title</string>
    <string name="noteEditText">Location is automatically filled in by your GPS connection</string>
    <string name="emergency_alerts">Emergency Alerts</string>
    <string name="all_requirements">Please complete all the required fields in order to report a new emergency alert!</string>
    <string name="timestamp_automatically">Timestamp is generated automatically</string>
    <string name="location_automatically">Location is generated automatically by your GPS connection</string>
    <string name="extra_details">You can give some extra details of the alert</string>
    <string name="add_emergency_alert">ADD EMERGENCY ALERT</string>
    <string name="main_title">Main Title</string>
    <string name="sub_title">Sub Title</string>

    <!-- for AddAlertActivity -->
    <string name="select_alert_category">Select Alert Category</string>
    <string name="flood">Flood</string>
    <string name="fire">Fire</string>
    <string name="earthquake">Earthquake</string>
    <string name="extreme_temperature">Extreme Temperature</string>
    <string name="snowstorm">Snowstorm</string>
    <string name="tornado">Tornado</string>
    <string name="storm">Storm</string>
    <string name="new_emergency_alert">New Emergency Alert</string>
    <string name="gps_settings">GPS settings</string>
    <string name="settings_menu">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="no_gps_connection">No GPS connection</string>
    <string name="gps_loading">Please wait until you find GPS connection so as we can access your location!</string>
    <string name="simple_title">Title</string>
    <string name="select_category">Please select a category!</string>
    <string name="simple_category">Category</string>
    <string name="alert_reported">Emergency alert was reported</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">"Longitude: "</string>


    <!-- for AllAlertsActivity -->
    <string name="untrackable_location">Untrackable Location</string>
    <string name="danger">"Danger: "</string>
    <string name="alerts_counter">"Alerts Counter: "</string>
    <string name="no_emergency_alerts">There are no emergency alerts reported</string>
    <string name="simple_location">"Location: "</string>

    <!-- for CitizenProfileActivity -->
    <string name="citizen_profile">Citizen Profile</string>
    <string name="unavailable_details">Something went wrong! User\'s details are not available at the moment.</string>
    <string name="welcome">\"Welcome, \"</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_accepted">Permission accepted</string>

    <!-- for CitizenStatisticsActivity -->
    <string name="emergency_alert_stats">Emergency Alert Statistics</string>
    <string name="time">"Time : "</string>

    <!-- for EmployeeProfile -->
    <string name="employee_profile">Employee Profile</string>


    <!-- for ForgotPasswordActivity -->
    <string name="email_required">Email is required</string>
    <string name="valid_email">Please enter a valid email</string>
    <string name="reset_password">Open your emails and reset your password</string>
    <string name="error">Error</string>

    <!-- for LoginActivity -->
    <string name="password_required">Password is required</string>
    <string name="no_role">This user does not have a role.</string>
    <string name="user_not_exists">User does not exist or is no longer valid.</string>

    <!-- for Signup Activity -->
    <string name="fullname_required">Full name is required</string>
    <string name="mobile_required">Mobile phone number is required</string>
    <string name="mobile_length">Mobile phone number must be 10 digits</string>
    <string name="password_min_length">Password must be at least 6 characters</string>
    <string name="password_confirmation">Password confirmation is required</string>
    <string name="passwords_dont_match">The passwords do not match</string>
    <string name="user_registered">User registered successfully</string>
    <string name="gps_necessary">GPS is necessary for signing up. Do you want to go to settings menu?</string>

    <!-- for SpecificItemsAlerts -->
    <string name="date">\"Date: \"</string>
    <string name="simple_description">\"Description: \"</string>
    <string name="alert_declined">Emergency Alert was Declined</string>
    <string name="notification_title">GR-ALERT: Urgent Emergency Notification</string>
    <string name="notification_body_start">\"Warning message for \"</string>
    <string name="notification_body_mid">\" in the next few hours near  \"</string>
    <string name="notification_body_end">. Limit transportation to the absolute necessary and follow the given instructions. More information:  https://www.civilprotection.gr/el/entona-kairika-fainomena.</string>
    <string name="alert_accepted">Emergency Alert was Accepted and notification was sent to close region users</string>
    <string name="choose_app_language">Choose app language</string>
    <string name="greek">Greek</string>
    <string name="english">English</string>
    <string name="apply_changes">Apply Changes</string>


</resources>
