<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="361dp"
            android:layout_height="105dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="92dp"
            android:text="@string/choose_app_language"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="131dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="37dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/grId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/greek" />

            <RadioButton
                android:id="@+id/grId"
                android:layout_width="158dp"
                android:layout_height="94dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="38dp"
                android:layout_marginBottom="27dp"
                android:text="@string/greek"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="124dp"
                android:layout_toStartOf="@+id/engId"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toStartOf="@+id/engId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/usa" />

            <RadioButton
                android:id="@+id/engId"
                android:layout_width="166dp"
                android:layout_height="82dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="29dp"
                android:text="@string/english"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/grId" />


        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="319dp"
        android:layout_height="62dp"
        android:layout_marginBottom="48dp"
        android:text="@string/apply_changes"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>