<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAlertActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEDE7"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#EEEDE7">

                <TextView
                    android:id="@+id/textView_register_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/all_requirements"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border"
                android:padding="15dp">


                <RelativeLayout
                    android:id="@+id/RL_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewName"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/title" />

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewName"
                        android:padding="6dp"
                        android:text="@string/title" />

                    <View
                        android:id="@+id/divider_title"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/titleTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="67dp"
                        android:layout_marginEnd="35dp"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/titleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleTextView"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewName"
                        android:background="@android:color/transparent"
                        android:hint="@string/please_give_a_title"
                        android:inputType="textPersonName"
                        android:padding="6dp"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RL_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_name"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewEmail"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/timestamp" />

                    <TextView
                        android:id="@+id/timestampTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewEmail"
                        android:padding="6dp"
                        android:text="@string/timestamp" />

                    <View
                        android:id="@+id/divider_timestamp"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/timestampTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="67dp"
                        android:layout_marginEnd="35dp"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/timestampEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/timestampTextView"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewEmail"
                        android:background="@android:color/transparent"
                        android:hint="@string/timestamp_automatically"
                        android:inputType="textPersonName"
                        android:padding="6dp"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RL_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_email"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewDoB"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/location" />

                    <TextView
                        android:id="@+id/locationTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewDoB"
                        android:padding="6dp"
                        android:text="@string/location" />

                    <View
                        android:id="@+id/divider_location"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/locationTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="67dp"
                        android:layout_marginEnd="35dp"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/locationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/locationTextView"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewDoB"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/location_automatically"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:padding="6dp"
                        android:textSize="16sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RL_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_dob"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewGender"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/category" />

                    <TextView
                        android:id="@+id/categoryTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewGender"
                        android:padding="6dp"
                        android:text="@string/category" />

                    <View
                        android:id="@+id/divider_category"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/categoryTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="67dp"
                        android:layout_marginEnd="35dp"
                        android:background="@android:color/darker_gray" />

                    <Spinner
                        android:id="@+id/spinner"
                        style="@android:style/Widget.Material.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"

                        android:layout_below="@id/categoryTextView"
                        android:layout_alignParentStart="true"

                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="63dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="9dp"
                        android:backgroundTint="#7C0C0A0A"
                        android:spinnerMode="dropdown" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RL_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_gender"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewMobile"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/description" />

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewMobile"
                        android:padding="6dp"
                        android:text="@string/description" />

                    <View
                        android:id="@+id/divider_description"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/descriptionTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="67dp"
                        android:layout_marginEnd="35dp"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/descriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/descriptionTextView"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewMobile"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/extra_details"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:textAlignment="textStart"
                        android:textSize="16sp" />
                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:elevation="10dp"
                     />
            </RelativeLayout>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>